Fix overflow issue

--- a/src/views/Root/index.css
+++ b/src/views/Root/index.css
@@ -21,6 +21,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 #root {
@@ -28,6 +30,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 100vw;
+  overflow: hidden
 }
 
 /* MAPS */
